PROJECT(proxy)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CMAKE_C_FLAGS "-Wall -g -O2")
SET(CMAKE_CXX_FLAGS "-Wall -g -O2 ")

FILE(GLOB_RECURSE FOUND_LIST "Foundation/*.cpp")
FILE(GLOB_RECURSE NET_LIST "Net/*.cpp")

INCLUDE_DIRECTORIES("Foundation")
INCLUDE_DIRECTORIES("Net")
INCLUDE_DIRECTORIES("/usr/local/include/")

ADD_LIBRARY(proxy STATIC ${FOUND_LIST} ${NET_LIST})

LINK_DIRECTORIES("/usr/local/lib")

ADD_EXECUTABLE(net  "app/net.cpp")
TARGET_LINK_LIBRARIES(net proxy)
TARGET_LINK_LIBRARIES(net PocoFoundation)
TARGET_LINK_LIBRARIES(net PocoUtil)
TARGET_LINK_LIBRARIES(net PocoNet)

ADD_EXECUTABLE(found  "app/found.cpp")
TARGET_LINK_LIBRARIES(found proxy)
TARGET_LINK_LIBRARIES(found PocoFoundation)
TARGET_LINK_LIBRARIES(found PocoUtil)
TARGET_LINK_LIBRARIES(found PocoNet)
